Fix trending covers and speed up title/author search